--- a/style.css
+++ b/style.css
@@ -47,10 +47,150 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
+    background-color: var(--clr-base);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 2rem;
 }
 
 img {
     max-width: 100%;
 }
 
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
 /* --- */
+
+.phone {
+    background-color: var(--clr-bg-app);
+    border: 1rem solid var(--clr-base);
+    border-radius: 2.5rem;
+    overflow: hidden;
+    box-shadow: 0 0 0.25rem 0.2rem rgba(0, 0, 0, 0.125);
+}
+
+.phone .header {
+    --_indentation: 1rem;
+    --_padding: 0.75rem;
+
+    background: linear-gradient(
+        to right,
+        var(--clr-gradient-main-dark),
+        var(--clr-gradient-main-light)
+    );
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: var(--_padding) 0.5rem;
+    padding-top: calc(1.5 * var(--_padding) + var(--_indentation));
+    color: var(--clr-base);
+    border-radius: 0.5rem;
+    position: relative;
+}
+
+.phone .header::before {
+    content: "";
+    position: absolute;
+    background-color: var(--clr-base);
+    width: 60%;
+    height: 1.5rem;
+    border-radius: 0 0 1rem 1rem;
+    top: 0;
+    left: 50%;
+    translate: -50%;
+}
+
+.phone .header .avatar {
+    width: 2rem;
+    border-radius: 100%;
+    border: 1px solid var(--clr-base);
+}
+
+.phone .header p {
+    font-size: 0.9rem;
+    margin: 0;
+}
+
+.phone .header .subHeading {
+    font-size: 0.7rem;
+    font-weight: var(--fw-light);
+    color: var(--clr-text-sub-heading);
+}
+
+.phone .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+
+.message {
+    --_bdrs-off: 0.25rem;
+    border-radius: 0.75rem;
+    padding: 0.4rem;
+    max-width: 65%;
+    font-size: 0.7rem;
+    font-weight: var(--fw-light);
+}
+
+.message.from {
+    border-bottom-left-radius: var(--_bdrs-off);
+    background-color: color-mix(
+        in srgb,
+        var(--clr-text-sub-heading) 25%,
+        transparent 100%
+    );
+    color: var(--clr-text-message-from);
+    align-self: flex-start;
+}
+
+.message.to {
+    border-bottom-right-radius: var(--_bdrs-off);
+    background-color: var(--clr-base);
+    color: var(--clr-text-message-to);
+    align-self: flex-end;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
+}
+
+main {
+    text-align: center;
+    margin-top: 1.5rem;
+}
+
+main h1 {
+    font-weight: var(--fw-bold);
+    color: var(--clr-text-heading);
+}
+
+main p {
+    color: var(--clr-text-paragraph);
+    font-weight: var(--fw-light);
+    line-height: 150%;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 0.7rem;
+    width: 100%;
+    text-align: center;
+}
+
+footer a {
+    color: var(--clr-text-message-from);
+}
