--- a/style.css
+++ b/style.css
@@ -73,6 +73,16 @@ img {
     gap: 0.25rem;
 }
 
+.icon {
+    display: block;
+    width: 1rem;
+    aspect-ratio: 1;
+    background-color: var(--clr-base);
+    mask-repeat: no-repeat;
+    mask-position: center;
+    mask-size: contain;
+}
+
 /* --- */
 
 .phone {
@@ -83,7 +93,7 @@ img {
     box-shadow: 0 0 0.25rem 0.2rem rgba(0, 0, 0, 0.125);
 }
 
-.phone .header {
+.header {
     --_indentation: 1rem;
     --_padding: 0.75rem;
 
@@ -102,7 +112,7 @@ img {
     position: relative;
 }
 
-.phone .header::before {
+.header::before {
     content: "";
     position: absolute;
     background-color: var(--clr-base);
@@ -114,24 +124,32 @@ img {
     translate: -50%;
 }
 
-.phone .header .avatar {
+.header .icon.back {
+    mask-image: url("/docs/assets/icons/chevron-compact-left.svg");
+}
+
+.header .icon.menu {
+    mask-image: url("/docs/assets/icons/three-dots-vertical.svg");
+}
+
+.header .avatar {
     width: 2rem;
     border-radius: 100%;
     border: 1px solid var(--clr-base);
 }
 
-.phone .header p {
+.header p {
     font-size: 0.9rem;
     margin: 0;
 }
 
-.phone .header .subHeading {
+.header .subHeading {
     font-size: 0.7rem;
     font-weight: var(--fw-light);
     color: var(--clr-text-sub-heading);
 }
 
-.phone .content {
+.content {
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -202,12 +220,21 @@ img {
     font-size: 0.75rem;
 }
 
+.offer .radio {
+    width: 1rem;
+    aspect-ratio: 1;
+    border-radius: 100%;
+    border: 1px solid var(--clr-outline-radio-button);
+}
+
 .messageBox {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin: 1rem;
     margin-top: 0;
-    padding: 0.75rem 1.25rem;
+    padding: 0.5em;
+    padding-left: 1rem;
     border-radius: 2rem;
     background-color: var(--clr-base);
     font-size: 0.7rem;
@@ -218,6 +245,20 @@ img {
 
 .messageBox p {
     margin: 0;
+}
+
+.messageBox button.submit {
+    border: none;
+    background-color: var(--clr-bg-button-submit);
+    padding: 0.3em;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.messageBox .icon.arrowRight {
+    mask-image: url("./docs/assets/icons/chevron-right.svg");
 }
 
 main {
