--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding: 2rem;
+    padding: 1rem;
 }
 
 img {
@@ -86,6 +86,7 @@ img {
 /* --- */
 
 .phone {
+    width: 20rem;
     background-color: var(--clr-bg-app);
     border: 1rem solid var(--clr-base);
     border-radius: 2.5rem;
@@ -262,6 +263,7 @@ img {
 }
 
 main {
+    max-width: 40ch;
     text-align: center;
     margin-top: 1.5rem;
 }
@@ -288,4 +290,20 @@ footer {
 
 footer a {
     color: var(--clr-text-message-from);
+}
+
+@media (width >= 700px) {
+    body {
+        padding: 0;
+        flex-direction: row;
+        gap: 5%;
+    }
+
+    main {
+        text-align: left;
+    }
+
+    .phone {
+        scale: 0.9;
+    }
 }
